Fix test-service-broker crash on JDK 17 by adding --add-opens flags
The test-service-broker.jar (Spring Boot 1.5.16 / Spring Framework
4.3.19) uses CGLIB proxying which requires reflective access to
java.lang.ClassLoader.defineClass(). JDK 17's module system blocks
this, causing the app to crash on startup with
InaccessibleObjectException and all ApplicationsTest methods to fail
with DelayTimeoutException during serviceBrokerId bean creation.